--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body class="flex items-center justify-center min-h-screen bg-gradient-to-br from-slate-900 to-slate-700 text-slate-100">
     <div class="container">
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-sky-400">QI Master</h1>
+            <h1 class="text-4xl font-bold text-sky-400">Nailu Master</h1>
             <p class="text-slate-300">Teste os seus conhecimentos!</p>
             <p class="text-xs text-slate-400 mt-2">User ID: <span id="user-id-display">A autenticar...</span></p>
         </header>
