--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             const perguntas = [];
 
             for (let i = 0; i < TOTAL_QUESTIONS; i++) {
-                const termos = randomKeywords[category];
+                const termos = randomKeywords[category
                 const termo = termos[Math.floor(Math.random() * termos.length)];
                 const query = encodeURIComponent(termo);
 
